guardar cambio de titulo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sweet Recipes</title>
 </head>
 <body>
-  <h1>Odin Sweet Recipes</h1>
+  <h1>Sweet Recipes</h1>
   <img src="https://img.freepik.com/foto-gratis/vista-superior-concepto-bodegon-libro-recetas_23-2149056016.jpg?w=740&t=st=1692499201~exp=1692499801~hmac=d2fa132bbeb33472369874e2b701d88f5ec623477167f2bd27946b0c953b34f2" alt="kitchen and materials "></img>
     <ul>
       <li><a href="recipes/cookies.html">Chocolate chip cookies</a></li>
