--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sweet Recipes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Sweet Recipes</h1>
-  <img src="https://img.freepik.com/foto-gratis/cerrar-mano-preparando-postre_23-2148972041.jpg?w=826&t=st=1692558009~exp=1692558609~hmac=aebfeb6dcd2b471692ef75140251af54bd4a3793929446aab0b1fe4956777100" alt="kitchen and materials "></img>
+  <h2>the best sweet recipes you can find are here, you will surprise everyone with these magic recipes.</h2>
+  <center><img class="img1" src="https://img.freepik.com/foto-gratis/cerrar-mano-preparando-postre_23-2148972041.jpg?w=826&t=st=1692558009~exp=1692558609~hmac=aebfeb6dcd2b471692ef75140251af54bd4a3793929446aab0b1fe4956777100" alt="kitchen and materials "></img></center>
     <ul>
       <li><a href="recipes/cookies.html">Chocolate chip cookies</a></li>
       <li><a href="recipes/cupcakes.html">Vanilla Cupcakes</a></li>
